# breads

./: .gitignore  LICENSE  README.md  open_fit_results.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: ci_test_workflow.yml  docbuild.yml
bread/: calibration.py  search_planet.py  utils.py
bread/instruments/: OSIRIS.py  instrument.py
breads/: __init__.py  atm_utils.py  calibration.py  fit.py  grid_search.py  injection.py  search_planet.py  utils.py
breads/fm/: __init__.py  breads_prt.yaml  hc_atmgrid_2dsplinefm_jwst_nirspec_cal.py  hc_atmgrid_2dsplinefm_jwst_nirspec_cal_FixedSlit.py  hc_atmgrid_hpffm.py  hc_atmgrid_splinefm.py  hc_atmgrid_splinefm_jwst_ifu_cal.py  hc_atmgrid_splinefm_jwst_miri_cal.py  hc_atmgrid_splinefm_jwst_nirspec.py  hc_atmgrid_splinefm_jwst_nirspec_cal.py  hc_atmgrid_splinefm_jwst_nirspec_cal_FixedSlit.py  hc_hpffm.py  hc_kpicrvfm.py  hc_mask_splinefm.py  hc_no_splinefm.py  hc_prt_splinefm.py  hc_splinefm.py  hc_splinefm_jwst_nirspec.py  iso_atmgrid_doppler_hpffm.py  iso_atmgrid_hpffm.py  iso_atmgrid_splinefm.py  iso_hpffm.py  iso_splinefm.py  splinefm.py  template.py
breads/instruments/: KPIC.py  OSIRIS.py  __init__.py  instrument.py  jwst_IFUs.py  jwstmiri_cal.py  jwstmiri_multiple_cal.py  jwstnirpsec.py  (+7 more)
demos/: atm_utils_tutorial.ipynb  breads_simple_fit_tutorial.ipynb  demo_calibration.ipynb  demo_ccf.py  demo_dynesty.py  demo_emcee.py  demo_opti.py  demo_petitradtrans.ipynb  demo_planning_jwst_ifu_obs.ipynb  demo_planning_nrs_ifu_obs.ipynb  demo_psf_fitting_jwst_nirspec_ifu.py  demo_search_planet.py
(+45 files in other folders)
